--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
-    "vite": "^5.4.8"
-  },
-  "dependencies": {}
+    "vite": "^5.4.8",
+    "vite-plugin-string": "^1.2.3"
+  }
 }
